# irspack

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.in  Readme.md  create_pb_stubs.sh  docker-compose.yml  mypy.ini  pre-build-wheel-script.sh  pyproject.toml  requirements.txt  run_autobuild.sh  setup.py
.github/workflows/: codecov.yml  docs.yml  main-macos.yml  main.yml  mypy-check.yml  pre-commit.yml  run-test-win.yml  run-test.yml  wheels.yml
cpp_source/: argcheck.hpp  evaluator.cpp  rws.cpp  util.cpp  util.hpp
cpp_source/als/: IALSLearningConfig.hpp  IALSTrainer.hpp  definitions.hpp  wrapper.cpp
cpp_source/knn/: knn.hpp  similarities.hpp  wrapper.cpp
cpp_source/mf/: definitions.hpp  wrapper.cpp
cpp_source/mf/ials/: IALSLearningConfig.hpp  IALSTrainer.hpp
cpp_source/mf/nmf/: NMFLearningConfig.hpp  NMFTrainer.hpp
cpp_source/sgd_mf/: sgd_mf.cpp
docs/: requirements.txt
docs/source/: api_reference.rst  choosing_a_recommender.rst  conf.py  feature_aware_ials.rst  getting_started.rst  index.rst  tuto1.rst  tuto2.rst  tuto3.rst  using_your_data.rst
docs/source/_static/: custom.css
examples/: 1-vs-100-negative.ipynb  evaluate-recommender.ipynb  hyperparameter-optimization.ipynb  train-first-recommender.ipynb
examples/biz_cand_view/: biz_cand_view.py
examples/biz_ess/: biz_ess.py
examples/biz_target_list/: biz_target_list.py
examples/biz_tl_user_coldstart/: optimize.py
examples/bizhint_session/: bizhint_session.py
examples/ct_target_list/: ct_target_list.py
examples/mind/: mind_small_feature_aware_ials.py
examples/movielens/: movielens_1m.py  movielens_1m_cold.py  movielens_1m_feature_aware_ials.py  movielens_1m_user_cold_start.py  movielens_20m_cold.py  with_bpr.py
irspack/: __init__.py  _evaluator.pyi  definitions.py  evaluator.py  parameter_tuning.py  split.py
irspack/dataset/: __init__.py  amazon_music.py  citeulike.py  downloader.py  neu_mf.py
irspack/dataset/movielens/: ML100K.py  ML1M.py  ML20M.py  __init__.py  base.py
irspack/evaluation/: __init__.py  _core.pyi  evaluate_df_to_df.py  evaluator.py
irspack/evaluator/: __init__.py  _core.pyi  evaluator.py
irspack/item_cold_start/: __init__.py  base.py  cb2cf.py  evaluator.py  knn.py  random.py
irspack/optimization/: __init__.py  _optimizers.py  base_optimizer.py  optimizer.py  parameter_range.py
irspack/optimizers/: __init__.py  _optimizers.py  autopilot.py  base_optimizer.py  ials.py
irspack/parameter_tuning/: __init__.py  auto_pilot.py  autopilot.py  parameter_range.py
irspack/recommenders/: __init__.py  _ials.pyi  _knn.pyi  _mf.pyi  _rwr.pyi  _util_cpp.pyi  base.py  base_earlystop.py  bpr.py  dense_slim.py  edlae.py  ials.py  knn.py  mf.py  multvae.py  nmf.py  nmf_experimental.py  p3.py  rp3.py  rwr.py  slim.py  toppop.py  truncsvd.py  user_knn.py  utils.py
irspack/recommenders/optimization/: optimizer.py
irspack/split/: __init__.py  random.py  specified.py  time.py  userwise.py
irspack/user_cold_start/: __init__.py  base.py  cb2cf.py  cb_knn.py  evaluator.py  linear.py  optimizer.py  popular.py
irspack/user_cold_start/optimizers/: __init__.py  base_optimizer.py
irspack/user_cold_start/recommenders/: __init__.py  base.py  cb_knn.py  linear.py  popular.py
irspack/utils/: __init__.py  _util_cpp.pyi  default_logger.py  id_mapping.py  nn.py  random.py  sample_data.py  threading.py
irspack/utils/encoders/: __init__.py  base.py  categorical.py  dataframe.py  float_categorizer.py  multi_value.py
src/irspack/: __init__.py  _version.py  default_logger.py
src/irspack/dataset/: __init__.py  citeulike.py  downloader.py  mind.py  neu_mf.py
src/irspack/evaluation/: __init__.py  _core.pyi  _core_evaluator.pyi  evaluate_df_to_df.py  evaluator.py
src/irspack/optimization/: optimizer.py
src/irspack/recommenders/: __init__.py  _ials.pyi  _ials_core.pyi  _knn.pyi  base.py  base_earlystop.py  bpr.py  dense_slim.py  edlae.py  ials.py  knn.py  multvae.py  nmf.py  p3.py  rp3.py  slim.py  toppop.py  truncsvd.py  user_knn.py
src/irspack/split/: __init__.py  specified.py  time.py  userwise.py
src/irspack/utils/: __init__.py  _util_cpp.pyi  id_mapping.py  random.py  sample_data.py
tests/: conftest.py  mock_recommender.py  test_all.py  test_ials.py  test_knn.py  test_sparse_mm.py  test_split.py  test_utils.py
tests/autopilot/: mock_classes.py  test_autopilot.py
tests/dataset/: test_mind.py  test_ml100k.py  test_ml1m.py  test_ml20m.py  test_neumf.py
tests/evaluation/: test_df_vs_df.py  test_evaluator.py  test_restricted_evaluator.py
tests/optimization/: test_earlystop_optimizer.py  test_ials_doubling_dimension.py  test_optimizer.py
tests/optimizer/: test_earlystop_optimizer.py  test_ials_doubling_dimension.py  test_optimizer.py
tests/recommenders/: test_bpr.py  test_ials.py  test_knn.py  test_learn_all.py  test_slim.py  test_topop.py  test_truncsvd.py  test_user_knn.py
tests/split/: test_specific_holdout.py  test_time_holdout.py  test_userwise_split.py
tests/user_cold_start/: cb2cf.py  test_cb2cf.py  test_encodes.py  test_linear.py
tests/utils/: test_id_mapper.py  test_utils.py
